apps/router/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: router
  namespace: router
spec:
  type: ExternalName
  externalName: 192.168.0.1.nip.io
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
