apps/router/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: router
  namespace: router
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  tls:
    - hosts:
        - "router.home.holyb.xyz"
      secretName: wildcard-holyb-xyz-tls
  ingressClassName: nginx
  rules:
    - host: "router.home.holyb.xyz"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: router
                port:
                  number: 80
